--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/AlienX456/salidas-back-nodejs/issues"
   },
-  "homepage": "https://github.com/AlienX456/salidas-back-nodejs#readme"
+  "homepage": "https://github.com/AlienX456/salidas-back-nodejs#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mocha": "^8.1.1"
+  }
 }
