--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Back-End Microservicio Salidas",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "./node_modules/mocha/bin/mocha tests/ --exit"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/AlienX456/salidas-back-nodejs#readme",
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "mocha": "^8.1.1"
   }
