--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
-    "mocha": "^8.1.1"
+    "mocha": "^8.1.1",
+    "mongodb": "^3.6.0"
   }
 }
