--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ workflows:
       jobs:
         - test
         - aws-ecr/build-and-push-image:
+            requires: 
+              - test
             account-url: AWS_ECR_ACCOUNT_URL
             repo: '${AWS_REPO}'
             tag: '${AWS_REPO_TAG}'
