--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,6 @@ workflows:
         - aws-ecs/deploy-service-update:
             requires:
               - aws-ecr/build-and-push-image
-            family: "${AWS_SERVICE_NAME_PREFIX}-service"
+            family: "${AWS_SERVICE_NAME_PREFIX}"
             cluster-name: "${AWS_CLUSTER_NAME_PREFIX}-cluster"
             container-image-name-updates: "container=${AWS_SERVICE_NAME_PREFIX}-service,tag=${CIRCLE_SHA1}"
