--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,4 +33,4 @@ workflows:
               - aws-ecr/build-and-push-image
             family: "${AWS_SERVICE_NAME_PREFIX}"
             cluster-name: "${AWS_CLUSTER_NAME_PREFIX}-cluster"
-            container-image-name-updates: "container=${AWS_REPO},tag=${CIRCLE_SHA1}"
+            container-image-name-updates: "container=${AWS_CONTAINER_NAME},tag=${CIRCLE_SHA1}"
