--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,4 +33,5 @@ workflows:
               - aws-ecr/build-and-push-image
             family: "${AWS_SERVICE_NAME_PREFIX}"
             cluster-name: "${AWS_CLUSTER_NAME_PREFIX}-cluster"
+            service-name: "${AWS_SERVICE_NAME_PREFIX}-service"
             container-image-name-updates: "container=${AWS_CONTAINER_NAME},tag=${CIRCLE_SHA1}"
