--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,12 +23,18 @@ workflows:
       jobs:
         - test
         - aws-ecr/build-and-push-image:
+            branches:
+              only: 
+                - master
             requires: 
               - test
             account-url: AWS_ECR_ACCOUNT_URL
             repo: '${AWS_REPO}'
             tag: '${CIRCLE_SHA1}'
         - aws-ecs/deploy-service-update:
+            branches:
+              only: 
+                - master
             requires:
               - aws-ecr/build-and-push-image
             family: "${AWS_SERVICE_NAME_PREFIX}"
